// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it passes a11y 1`] = `
<div>
  <div
    class="govuk-form-group lbh-form-group"
    id="test"
  >
    <label
      class="govuk-label lbh-label"
      for="test-field"
    >
      DateInput Test
      
    </label>
    <div
      class="mtfh-date-input"
      id="test-field"
      name="test"
    >
      <input
        aria-label="Day"
        aria-valuemax="31"
        aria-valuemin="1"
        class="govuk-input lbh-input"
        name="day"
        role="spinbutton"
        value=""
      />
      <input
        aria-label="Month"
        aria-valuemax="12"
        aria-valuemin="1"
        class="govuk-input lbh-input"
        name="month"
        role="spinbutton"
        value=""
      />
      <input
        aria-label="Year"
        class="govuk-input lbh-input"
        name="year"
        role="spinbutton"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`it renders correctly 1`] = `
<div>
  <div
    class="mtfh-date-input"
  >
    <input
      aria-label="Day"
      aria-valuemax="31"
      aria-valuemin="1"
      class="govuk-input lbh-input"
      name="day"
      role="spinbutton"
      value=""
    />
    <input
      aria-label="Month"
      aria-valuemax="12"
      aria-valuemin="1"
      class="govuk-input lbh-input"
      name="month"
      role="spinbutton"
      value=""
    />
    <input
      aria-label="Year"
      class="govuk-input lbh-input"
      name="year"
      role="spinbutton"
      value=""
    />
  </div>
</div>
`;
